Added info to the reaadme, and removed the notes file.